# com-motorola-ccc-ota

./: .gitignore  AndroidManifest.xml  CAPSTONE_ANALYSIS.md  README.md  apktool.yml  capstone_disassemble.py  pyproject.toml  requirements.txt  wrangler.jsonc
.github/workflows/: copilot-setup-steps.yml  deploy-pages.yml
assets/: ai_loading_loop.json  alert_state.json  blue_complete.json  check_mark.json  download_stop_blue.json  download_stop_purple.json  downloading_blue.json  downloading_purple.json  just_one_more_step_blue.json  just_one_more_step_purple.json  loading.json  pdlAnimation_blue.json  pdlAnimation_purple.json  purple_complete.json  restart_blue.json  restart_purple.json  vitalCheckUpdate.json
assets/dexopt/: baseline.prof  baseline.profm
decompiled/: all_servers_probe_results.md  full_firmware_analysis.md  guid_bypass_guide.md  lsa_token_analysis.md  mumba_dump_analysis.md  ota_v36_analysis.md  ota_v36_smali_deep_analysis.md
decompiled/software_fix/: Software Fix.decompiled.cs  lenovo.mbg.service.common.utilities.decompiled.cs  lenovo.mbg.service.common.webservices.decompiled.cs  lenovo.mbg.service.framework.devicemgt.decompiled.cs  lenovo.mbg.service.framework.download.decompiled.cs  lenovo.mbg.service.framework.services.decompiled.cs  (+6 more)
moto_ota/: __init__.py  __main__.py  cli.py  tui.py
moto_ota/config/: __init__.py  (+5 more)
motoota/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
original/: AndroidManifest.xml
ota_analyzer/: __init__.py  __main__.py
(+7411 files in other folders)
