[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "moto-ota"
version = "2.0.0"
description = "Download OTA updates for Motorola devices via CDS servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "tenacity>=8.0.0",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "capstone>=5.0.0",
]

[project.scripts]
moto-ota = "moto_ota.cli:app"

[tool.setuptools.packages.find]
include = ["moto_ota*"]
